--- a/src/css/main.css
+++ b/src/css/main.css
@@ -1,3 +1,7 @@
+:root{
+    --color-nintendo: #e4040c;
+}
+
 *{
     box-sizing: border-box;
 }
@@ -72,7 +76,7 @@ nav .menu{
     min-width: 200px;
     margin-top: 52px;
 
-    background-color: #e4040c;
+    background-color: var(--color-nintendo);
 }
 
 nav .menu a{
@@ -100,7 +104,7 @@ nav .mobile .header{
     justify-content: space-between;
     flex-direction: row;
 
-    background-color: #e4040c;
+    background-color: var(--color-nintendo);
 }
 
 nav .mobile .header a{
@@ -124,7 +128,7 @@ nav .mobile .links{
     position: relative;
     z-index: 200;
 
-    background-color: #e4040c;
+    background-color: var(--color-nintendo);
 }
 
 nav .mobile .links a {
@@ -157,6 +161,74 @@ header{
     height: 100vh;
 }
 
+/* -------------------------- BANNER ------------------------*/
+/* --------------------------------------------------------- */
+
+#banner{
+    font-size: 1.5em;
+    text-align: center;
+    padding: 40px;
+    width: 400px;
+    position: absolute;
+    z-index: 100;
+    top: 100px;
+    right: 100px;
+
+    color: white;
+    background-color: rgba(0, 0, 0, 0.3);
+}
+
+.red-link,
+.red-button{
+    border: 0;
+    display: inline-flex;
+    align-items: center;
+    font-size: 14px;
+    padding: 10px 40px;
+    background-color: var(--color-nintendo);
+    color: white;
+    font-weight: bolder;
+    text-decoration: none;
+
+    transition: background-color 0.2s ease;
+}
+
+
+.red-link:hover,
+.red-button:hover{
+    background-color: #9c0f14;
+}
+
+/* .red-link{
+    border: 0;
+    display: inline-flex;
+    position: relative;
+    align-items: center;
+    font-size: 14px;
+    padding: 10px 40px;
+    color: #dd2329;
+    font-weight: bolder;
+    text-decoration: none;
+}
+
+.red-link::before{
+    content: '';
+    position: absolute;
+    display: block;
+    left: 0;
+    bottom: 0;
+    width: 100%;
+    height: 2px;
+    transform: scaleX(0);
+    transition: transform 0.3s ease;
+
+    background-color: rgb(207, 207, 207);
+}
+
+.red-link:hover::before{
+    transform: scaleX(1);
+} */
+
 @media screen and (max-width: 1190px) {
     nav .link-hide{
         display: none;
@@ -168,6 +240,12 @@ header{
 
     header{
         height: 70vh;
+    }
+
+    #banner{
+        position: initial !important;
+        z-index: 100;
+        width: 100%;
     }
 }
 
@@ -188,5 +266,11 @@ header{
 
     header{
         height: 30vh;
+    }
+
+    #banner{
+        position: initial !important;
+        z-index: 100;
+        width: 100%;
     }
 }
