--- a/src/css/main.css
+++ b/src/css/main.css
@@ -14,7 +14,7 @@ body{
     margin: 0;
     line-height: 1.5;
     
-    background-image: url('../src/img/black.jpg');
+    background-image: url('/src/img/black.jpg');
 }
 
 body::-webkit-scrollbar {
