--- a/src/css/main.css
+++ b/src/css/main.css
@@ -1,7 +1,8 @@
+@import url('https://fonts.googleapis.com/css2?family=Libre+Baskerville&display=swap');
+
 :root{
     --color-nintendo: #e4040c;
 }
-
 
 *{
     box-sizing: border-box;
@@ -29,6 +30,10 @@ body::-webkit-scrollbar-thumb {
     background-color: var(--color-nintendo);    /* color de la barrita que se desplaza (scroll thumb) */
     border-radius: 20px;       /* bordes redondeados del scroll thumb */
     border: 3px solid var(--color-nintendo);  /* crea espacios (si es necesario) al rededor del scroll thumb */
+}
+
+p{
+    font-family: 'Libre Baskerville';
 }
 
 /* -------------------------- NAVBAR ------------------------*/
@@ -250,6 +255,7 @@ h2{
 
 .red-link,
 .red-button{
+    font-family: Arial, Helvetica, sans-serif;
     text-transform: uppercase;
     border: 0;
     display: inline-flex;
@@ -491,12 +497,30 @@ h3{
 }
 
 footer{
+    display: flex;
+    justify-content: center;
+    align-items: center;
     height: 600px;
 
     background-image: url('/src/img/footer-bg.png');
     background-repeat: no-repeat;
     background-size: cover;
     background-position: center;
+}
+
+footer .copyright{
+    width: 100%;
+    padding: 10px;
+    align-self: end;
+    text-align: center;
+
+    color: white;
+    background-color: rgba(0, 0, 0, 0.7);
+}
+
+footer .copyright p{
+    font-family: Arial, Helvetica, sans-serif;
+    font-size: 0.7rem;
 }
 
 @media screen and (max-width: 1190px) {
